--- a/packages/polyfills/package.json
+++ b/packages/polyfills/package.json
@@ -18,8 +18,6 @@
   "dependencies": {
     "buffer": "^6.0.3",
     "clipboard-polyfill": "^3.0.3",
-    "core-js": "^3.21.1",
-    "elliptic": "^6.5.4",
-    "webcrypto-liner": "1.3.1"
+    "core-js": "^3.21.1"
   }
 }
