feat: introduce ses in dev (#5759)
* chore: upgrade web3

* fix: lockfile

* fix: type error

* feat: introduce ses in dev

* chore: patch immer

* fix: gun

* chore: patch @uniswap/v3-sdk

* chore: injected-script with ses

* -n -m chore: patch web3-core-method

* fix: lock file

* fix: patch ses

* chore: add regenerator fixes

* fix: regenerator again

* chore: remove unused code

* chore: remove unused code

* chore: try lockdown whole world

* fix: lockfile

* fix: lockfile

* fix: linter

* fix: linter

* chore: upgrade ses

* chore: update lockfile

* fix: lockfile

* chore: cleanup

--- a/package.json
+++ b/package.json
@@ -41,11 +41,13 @@
     "@types/react": "18.0.2",
     "@types/react-dom": "^18.0.0",
     "@types/web": "^0.0.61",
+    "immer": "9.0.12",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "lodash-unified": "1.0.2",
     "react": "18.0.0",
     "react-dom": "18.0.0",
+    "ses": "0.15.12",
     "react-i18next": "^11.16.5",
     "ts-results": "3.3.0",
     "web3-core": "1.7.3",
