--- a/packages/plugins/tsconfig.json
+++ b/packages/plugins/tsconfig.json
@@ -10,6 +10,8 @@
     { "path": "./RSS3/" },
     { "path": "./DAO/" },
     { "path": "./CyberConnect/" },
-    { "path": "./CrossChainBridge/" }
+    { "path": "./CrossChainBridge/" },
+    { "path": "./Web3Profile/" },
+    { "path": "./Web3Profile/" }
   ]
 }
