--- a/packages/plugins/tsconfig.json
+++ b/packages/plugins/tsconfig.json
@@ -4,6 +4,7 @@
     { "path": "./Approval/" },
     { "path": "./ArtBlocks/" },
     { "path": "./Avatar/" },
+    { "path": "./Calendar/" },
     { "path": "./Claim/" },
     { "path": "./Collectible/" },
     { "path": "./CrossChainBridge/" },
@@ -36,7 +37,6 @@
     { "path": "./Transak/" },
     { "path": "./VCent/" },
     { "path": "./Web3Profile/" },
-    { "path": "./template/" },
-    { "path": "./Calendar" }
+    { "path": "./template/" }
   ]
 }
