--- a/packages/plugins/Calendar/package.json
+++ b/packages/plugins/Calendar/package.json
@@ -13,6 +13,8 @@
         }
     },
     "dependencies": {
+        "@emotion/react": "11.10.4",
+        "@emotion/styled": "11.10.4",
         "@masknet/icons": "workspace:^",
         "@masknet/plugin-infra": "workspace:^",
         "@masknet/shared": "workspace:^",
@@ -20,8 +22,12 @@
         "@masknet/shared-base-ui": "workspace:^",
         "@masknet/theme": "workspace:^",
         "@masknet/web3-providers": "workspace:^",
+        "@mui/material": "5.10.8",
+        "@mui/styled-engine-sc": "^5.14.9",
+        "@mui/x-date-pickers": "^6.13.0",
+        "date-fns": "^2.30.0",
         "react-use": "^17.4.0",
-        "use-subscription": "^1.8.0",
-        "date-fns": "^2.30.0"
+        "styled-components": "^6.0.8",
+        "use-subscription": "^1.8.0"
     }
 }
