--- a/tsconfig.json
+++ b/tsconfig.json
@@ -75,6 +75,7 @@
       // @masknet/mask is not listed. it does not have a exports/main field in the package.json.
       "@masknet/mask-sdk": ["./packages/mask-sdk/server"],
       "@masknet/plugin-infra/dom": ["./packages/plugin-infra/src/entry-dom.ts"],
+      "@masknet/plugin-infra/dom/context": ["./packages/plugin-infra/src/dom/context.ts"],
       "@masknet/plugin-infra/background-worker": ["./packages/plugin-infra/src/entry-background-worker.ts"],
       "@masknet/plugin-infra/dashboard": ["./packages/plugin-infra/src/entry-dashboard.ts"],
       "@masknet/plugin-infra/content-script/context": ["./packages/plugin-infra/src/site-adaptor/context.ts"],
