--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -46,6 +46,7 @@
     "bignumber.js": "9.1.1",
     "d3": "^5.16.0",
     "date-fns": "^2.30.0",
+    "fuse.js": "6.6.2",
     "iframe-resizer-react": "^1.1.0",
     "immer": "^10.0.2",
     "json-stable-stringify": "^1.0.2",
