--- a/packages/web3-hooks/base/package.json
+++ b/packages/web3-hooks/base/package.json
@@ -28,7 +28,6 @@
     "lru-cache": "^10.0.0",
     "react-use": "^17.4.0",
     "unstated-next": "^1.1.0",
-    "use-subscription": "^1.8.0",
-    "web3": "1.10.2"
+    "use-subscription": "^1.8.0"
   }
 }
