chore: upgrade packages (#10795)
* chore: bump package versions

* refactor: remove patches

* chore: update lock file

* chore: patch pkgs

* refactor: code style

* fix: type errors

* fix: types

* chore: webpack zlib

* fix: abi coder type

* fix: type error

* fix: markdownlint

* refactor: remove web3

* fix: remove test case due to web3 required

---------

Co-authored-by: guanbinrui <guanbinrui@users.noreply.github.com>

--- a/packages/mask/package.json
+++ b/packages/mask/package.json
@@ -114,7 +114,7 @@
     "anchorme": "^2.1.2",
     "assert": "^2.0.0",
     "async-call-rpc": "^6.3.1",
-    "bignumber.js": "9.1.1",
+    "bignumber.js": "9.1.2",
     "bip39": "^3.1.0",
     "buffer": "^6.0.3",
     "clipboard-polyfill": "^3.0.3",
@@ -130,6 +130,7 @@
     "guess-calling-code": "^1.1.7",
     "html-to-image": "^1.11.11",
     "https-browserify": "^1.0.0",
+    "zlib-browserify": "^0.0.3",
     "idb": "^7.1.1",
     "iframe-resizer-react": "^1.1.0",
     "immer": "^10.0.2",
@@ -162,12 +163,11 @@
     "use-subscription": "^1.8.0",
     "uuid": "^9.0.0",
     "wallet.ts": "^1.0.1",
-    "web3": "1.8.0",
-    "web3-core": "1.8.0",
-    "web3-core-helpers": "1.8.0",
-    "web3-eth-abi": "1.8.0",
-    "web3-eth-contract": "1.8.0",
-    "web3-utils": "1.8.0",
+    "web3-core": "1.10.2",
+    "web3-core-helpers": "1.10.2",
+    "web3-eth-abi": "1.10.2",
+    "web3-eth-contract": "1.10.2",
+    "web3-utils": "1.10.2",
     "webextension-polyfill": "^0.10.0",
     "zod": "^3.22.2"
   },
