--- a/packages/web3-shared/evm/package.json
+++ b/packages/web3-shared/evm/package.json
@@ -20,7 +20,7 @@
     "@masknet/web3-contracts": "workspace:^",
     "@masknet/web3-shared-base": "workspace:^",
     "@masknet/web3-telemetry": "workspace:^",
-    "bignumber.js": "9.1.1",
+    "bignumber.js": "9.1.2",
     "ethereum-blockies": "^0.1.1",
     "ethers": "^5.7.2",
    "date-fns": "^2.30.0",
@@ -33,13 +33,13 @@
     "use-subscription": "^1.8.0",
     "uuid": "^9.0.0",
     "wallet.ts": "^1.0.1",
-    "web3": "1.8.0",
-    "web3-core": "1.8.0",
-    "web3-core-helpers": "1.8.0",
-    "web3-eth-abi": "1.8.0",
-    "web3-eth-accounts": "1.8.0",
-    "web3-eth-contract": "1.8.0",
-    "web3-utils": "1.8.0"
+    "web3-core": "1.10.2",
+    "web3-core-helpers": "1.10.2",
+    "web3-eth": "1.10.2",
+    "web3-eth-abi": "1.10.2",
+    "web3-eth-accounts": "1.10.2",
+    "web3-eth-contract": "1.10.2",
+    "web3-utils": "1.10.2"
   },
   "devDependencies": {
     "@masknet/injected-script": "*",
