--- a/package.json
+++ b/package.json
@@ -138,7 +138,6 @@
       "micromark@3.1.0": "patches/micromark@3.1.0.patch",
       "micromark-util-symbol@1.0.1": "patches/micromark-util-symbol@1.0.1.patch",
       "@types/react-avatar-editor@13.0.0": "patches/@types__react-avatar-editor@13.0.0.patch",
-      "web3@1.8.0": "patches/web3@1.8.0.patch",
       "fuse.js@6.6.2": "patches/fuse.js@6.6.2.patch",
       "rss3-next@0.6.17": "patches/rss3-next@0.6.17.patch",
       "@project-serum/sol-wallet-adapter@0.2.6": "patches/@project-serum__sol-wallet-adapter@0.2.6.patch",
@@ -148,13 +147,13 @@
       "@walletconnect/client@1.7.8": "patches/@walletconnect__client@1.7.8.patch",
       "reflect-metadata@0.1.13": "patches/reflect-metadata@0.1.13.patch",
       "bloom-filters@3.0.0": "patches/bloom-filters@3.0.0.patch",
-      "web3-core@1.8.0": "patches/web3-core@1.8.0.patch",
       "urlcat@3.1.0": "patches/urlcat@3.1.0.patch",
       "@chainsafe/as-sha256@0.3.1": "patches/@chainsafe__as-sha256@0.3.1.patch",
       "@protobufjs/inquire@1.1.0": "patches/@protobufjs__inquire@1.1.0.patch",
       "@splinetool/runtime@0.9.342": "patches/@splinetool__runtime@0.9.342.patch",
       "guess-calling-code@1.1.7": "patches/guess-calling-code@1.1.7.patch",
-      "@walletconnect/socket-transport@1.7.8": "patches/@walletconnect__socket-transport@1.7.8.patch"
+      "@walletconnect/socket-transport@1.7.8": "patches/@walletconnect__socket-transport@1.7.8.patch",
+      "web3-core@1.10.2": "patches/web3-core@1.10.2.patch"
     }
   }
 }
