--- a/packages/web3-hooks/base/package.json
+++ b/packages/web3-hooks/base/package.json
@@ -23,12 +23,11 @@
     "@masknet/web3-telemetry": "workspace:^",
     "@types/ethereum-blockies": "^0.1.0",
     "@types/use-subscription": "^1.0.0",
-    "bignumber.js": "9.1.1",
+    "bignumber.js": "9.1.2",
     "ethereum-blockies": "^0.1.1",
     "lru-cache": "^10.0.0",
     "react-use": "^17.4.0",
     "unstated-next": "^1.1.0",
-    "use-subscription": "^1.8.0",
-    "web3": "1.8.0"
+    "use-subscription": "^1.8.0"
   }
 }
