--- a/packages/web3-providers/package.json
+++ b/packages/web3-providers/package.json
@@ -87,6 +87,7 @@
     "react-use": "^17.4.0",
     "rss3-next": "^0.6.17",
     "socket.io-client": "2.4.0",
+    "twitter-text": "^3.1.0",
     "urlcat": "^3.1.0",
     "use-subscription": "^1.8.0",
     "uuid": "^9.0.0",
