--- a/packages/web3-providers/package.json
+++ b/packages/web3-providers/package.json
@@ -31,14 +31,9 @@
     }
   },
   "dependencies": {
-    "@balancer-labs/sor": "^1.0.0",
     "@bonfida/spl-name-service": "^0.1.50",
     "@dimensiondev/mask-wallet-core": "0.1.0-20211013082857-eb62e5f",
     "@dimensiondev/metamask-extension-provider": "^3.0.6-20221105074301-8806fca",
-    "@ethersproject/abi": "^5.4.0",
-    "@ethersproject/address": "^5.4.0",
-    "@ethersproject/providers": "^5.7.2",
-    "@ethersproject/solidity": "^5.4.0",
     "@masknet/flags": "workspace:^",
     "@masknet/icons": "workspace:^",
     "@masknet/injected-script": "workspace:^",
@@ -62,11 +57,6 @@
     "@solana/buffer-layout": "^4.0.1",
     "@solana/spl-token": "^0.1.8",
     "@solana/web3.js": "^1.75.0",
-    "@types/socket.io-client": "^1.4.36",
-    "@types/uuid": "^9.0.3",
-    "@uniswap/sdk-core": "^3.0.1",
-    "@uniswap/v2-sdk": "3.0.0-alpha.2",
-    "@uniswap/v3-sdk": "3.9.0",
     "@walletconnect/client": "1.7.8",
     "@walletconnect/sign-client": "^2.7.3",
     "@walletconnect/socket-transport": "1.7.8",
@@ -84,7 +74,6 @@
     "immer": "^10.0.2",
     "json-stable-stringify": "^1.0.2",
     "lru-cache": "^10.0.0",
-    "react-use": "^17.4.0",
     "rss3-next": "^0.6.17",
     "socket.io-client": "2.4.0",
     "twitter-text": "^3.1.0",
@@ -103,6 +92,8 @@
     "@types/bn.js": "^4.11.6",
     "@types/bs58": "^4.0.1",
     "@types/json-stable-stringify": "^1.0.34",
-    "@types/use-subscription": "^1.0.0"
+    "@types/socket.io-client": "^1.4.36",
+    "@types/use-subscription": "^1.0.0",
+    "@types/uuid": "^9.0.3"
   }
 }
