refactor: use filter blob none to speedup checkout

--- a/.github/workflows/changeset.yml
+++ b/.github/workflows/changeset.yml
@@ -12,9 +12,10 @@ jobs:
     name: Changeset
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          filter: blob:none
       - uses: pnpm/action-setup@v2
       - uses: actions/setup-node@v3
         with:
