--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -31,9 +31,10 @@ jobs:
         run: echo "::set-output name=date::$(/bin/date -u "+%Y%m%d")"
         shell: bash
       # note: required by sentry
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          filter: blob:none
       - uses: pnpm/action-setup@v2
       - uses: actions/setup-node@v3
         with:
