--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "@types/masknet__global-types": "workspace:^",
     "@types/react": "18.2.21",
     "@types/react-dom": "^18.2.7",
-    "@typescript/lib-dom": "npm:@types/web@^0.0.109",
+    "@typescript/lib-dom": "npm:@types/web@^0.0.115",
     "i18next": "^23.2.11",
     "lodash-es": "^4.17.21",
     "react": "0.0.0-experimental-0a360642d-20230711",
@@ -86,7 +86,7 @@
     "prettier": "^3.0.3",
     "svgo": "^3.0.2",
     "ts-node": "^10.9.1",
-    "typescript": "5.3.0-dev.20230830",
+    "typescript": "5.3.0-beta",
     "vite": "^4.4.9",
     "vitest": "^0.34.3"
   },
