--- a/package.json
+++ b/package.json
@@ -99,14 +99,12 @@
       "web3@0.20.7>bignumber.js": "git+https://github.com/frozeman/bignumber.js-nolookahead.git#57692b3ecfc98bbdd6b3a516cb2353652ea49934",
       "@mui/base": "5.0.0-alpha.100",
       "@protobufjs/inquire": "1.1.0",
-      "@ethersproject/providers": "5.7.2",
       "reflect-metadata": "0.1.13",
       "@storybook/react-docgen-typescript-plugin": "npm:react-docgen-typescript-plugin@1.0.2",
       "webpack@5": "Jack-Works/webpack#528c91e564d5756e21c9c462b607d913452af770"
     },
     "override comments": {
-      "i18next-translation-parser": "see https://github.com/i18next/i18next-translation-parser/issues/11 we manually pin the commit",
-      "@ethersproject/providers": "@balancer-labs/sor is pinning a lower version which breaks the type check"
+      "i18next-translation-parser": "see https://github.com/i18next/i18next-translation-parser/issues/11 we manually pin the commit"
     },
     "onlyBuiltDependencies": [],
     "peerDependencyRules": {
