Revert "refactor: remove ssr (#10931)"
This reverts commit f2a740063a50ec8fd12c7421fd56d9f2f7e440f0.

--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -27,5 +27,9 @@
         "./icon-generated-as-url.d.ts"
       ]
     }
+  },
+  "scripts": {},
+  "dependencies": {
+    "@emotion/server": "^11.10.0"
   }
 }
