--- a/packages/mask/.webpack/manifest/manifest-mv3.json
+++ b/packages/mask/.webpack/manifest/manifest-mv3.json
@@ -29,7 +29,7 @@
         }
     ],
     "content_security_policy": {
-        "extension_pages": "script-src 'self' 'wasm-unsafe-eval'; object-src 'self'; trusted-types default dompurify mask;"
+        "extension_pages": "script-src 'self' 'wasm-unsafe-eval'; object-src 'self'; trusted-types default dompurify mask ssr;"
     },
     "minimum_chrome_version": "102"
 }
