--- a/package.json
+++ b/package.json
@@ -71,6 +71,8 @@
     "cross-fetch": "^4.0.0",
     "cspell": "^7.2.0",
     "eslint": "8.48.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-i": "^2.28.1",
     "eslint-plugin-import": "2.28.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
@@ -144,9 +146,9 @@
       "@chainsafe/as-sha256@0.3.1": "patches/@chainsafe__as-sha256@0.3.1.patch",
       "@protobufjs/inquire@1.1.0": "patches/@protobufjs__inquire@1.1.0.patch",
       "@splinetool/runtime@0.9.342": "patches/@splinetool__runtime@0.9.342.patch",
-      "guess-calling-code@1.1.7": "patches/guess-calling-code@1.1.7.patch",
       "@walletconnect/socket-transport@1.7.8": "patches/@walletconnect__socket-transport@1.7.8.patch",
-      "web3-core@1.10.2": "patches/web3-core@1.10.2.patch"
+      "web3-core@1.10.2": "patches/web3-core@1.10.2.patch",
+      "eslint-plugin-i@2.28.1": "patches/eslint-plugin-i@2.28.1.patch"
     }
   }
 }
