--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -65,51 +65,36 @@
         "@masknet/theme": "workspace:^",
         "@masknet/typed-message": "workspace:^",
         "@masknet/typed-message-react": "workspace:^",
-        "@masknet/web3-constants": "workspace:^",
-        "@masknet/web3-contracts": "workspace:^",
         "@masknet/web3-helpers": "workspace:^",
         "@masknet/web3-hooks-base": "workspace:^",
         "@masknet/web3-providers": "workspace:^",
         "@masknet/web3-shared-base": "workspace:^",
         "@masknet/web3-shared-evm": "workspace:^",
-        "@masknet/web3-shared-flow": "workspace:^",
-        "@masknet/web3-shared-solana": "workspace:^",
-        "@masknet/web3-telemetry": "workspace:^",
         "@servie/events": "^3.0.0",
         "@tailwindcss/aspect-ratio": "^0.4.2",
-        "@tailwindcss/container-queries": "^0.1.1",
         "@tailwindcss/forms": "^0.5.4",
-        "@tailwindcss/line-clamp": "^0.4.4",
         "@tailwindcss/typography": "^0.5.9",
         "async-call-rpc": "^6.3.1",
         "autoprefixer": "^10.4.14",
-        "color": "^4.2.3",
         "cross-env": "^7.0.3",
         "crypto-browserify": "^3.12.0",
-        "cssnano": "^6.0.1",
-        "date-fns": "^2.30.0",
         "idb": "^7.1.1",
         "postcss": "^8.4.29",
         "postcss-cli": "^10.1.0",
-        "purgecss": "^5.0.0",
         "react-router-dom": "^6.14.2",
         "react-use": "^17.4.0",
         "stream-browserify": "^3.0.0",
         "tailwindcss": "^3.3.3",
         "unstated-next": "^1.1.0",
-        "urlcat": "^3.1.0",
-        "use-subscription": "1.6.0"
+        "urlcat": "^3.1.0"
     },
     "devDependencies": {
         "@nice-labs/emit-file-webpack-plugin": "^1.1.4",
-        "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
         "@sinonjs/text-encoding": "^0.7.2",
         "@types/terser-webpack-plugin": "^5.2.0",
         "copy-webpack-plugin": "^11.0.0",
         "css-loader": "^6.8.1",
         "html-webpack-plugin": "^5.5.3",
-        "react-refresh": "^0.14.0",
-        "source-map-loader": "^4.0.1",
         "style-loader": "^3.3.3",
         "swc-loader": "^0.2.3",
         "terser-webpack-plugin": "^5.3.9",
