--- a/packages/mask-sdk/package.json
+++ b/packages/mask-sdk/package.json
@@ -22,7 +22,6 @@
     "@rollup/plugin-node-resolve": "^15.2.1",
     "@rollup/plugin-image": "^3.0.2",
     "rollup": "^3.28.1",
-    "rollup-plugin-swc3": "^0.10.1",
-    "rollup-plugin-terser": "^7.0.2"
+    "rollup-plugin-swc3": "^0.10.1"
   }
 }
