--- a/packages/plugin-infra/package.json
+++ b/packages/plugin-infra/package.json
@@ -66,28 +66,14 @@
     "@masknet/shared-base-ui": "workspace:^",
     "@masknet/theme": "workspace:^",
     "@masknet/typed-message": "workspace:^",
-    "@masknet/web3-constants": "workspace:^",
-    "@masknet/web3-contracts": "workspace:^",
     "@masknet/web3-helpers": "workspace:^",
     "@masknet/web3-shared-base": "workspace:^",
     "@masknet/web3-shared-evm": "workspace:^",
-    "@masknet/web3-shared-flow": "workspace:^",
-    "@masknet/web3-shared-solana": "workspace:^",
     "@servie/events": "^3.0.0",
-    "@types/ethereum-blockies": "^0.1.0",
     "@types/use-subscription": "^1.0.0",
     "async-call-rpc": "^6.3.1",
-    "bignumber.js": "9.1.2",
-    "ethereum-blockies": "^0.1.1",
-    "lru-cache": "^10.0.0",
     "react-use": "^17.4.0",
-    "unstated-next": "^1.1.0",
-    "urlcat": "^3.1.0",
     "use-subscription": "^1.8.0",
-    "wallet.ts": "^1.0.1",
-    "web3-core": "1.10.2",
-    "web3-core-helpers": "1.10.2",
-    "web3-utils": "1.10.2",
-    "webextension-polyfill": "^0.10.0"
+    "web3-core-helpers": "1.10.2"
   }
 }
