--- a/packages/plugins/Approval/package.json
+++ b/packages/plugins/Approval/package.json
@@ -17,7 +17,6 @@
     "@masknet/plugin-infra": "workspace:^",
     "@masknet/shared": "workspace:^",
     "@masknet/shared-base": "workspace:^",
-    "@masknet/shared-base-ui": "workspace:^",
     "@masknet/web3-hooks-base": "workspace:^",
     "@masknet/web3-hooks-evm": "workspace:^",
     "@masknet/web3-shared-base": "workspace:^",
@@ -25,9 +24,6 @@
     "@masknet/web3-providers": "workspace:^",
     "@masknet/theme": "workspace:^",
     "@masknet/web3-telemetry": "workspace:^",
-    "react-use": "^17.4.0",
-    "urlcat": "^3.1.0",
-    "bignumber.js": "9.1.2",
-    "unstated-next": "^1.1.0"
+    "react-use": "^17.4.0"
   }
 }
