--- a/packages/plugins/Calendar/package.json
+++ b/packages/plugins/Calendar/package.json
@@ -20,8 +20,6 @@
         "@masknet/shared-base-ui": "workspace:^",
         "@masknet/theme": "workspace:^",
         "@masknet/web3-providers": "workspace:^",
-        "date-fns": "^2.30.0",
-        "react-use": "^17.4.0",
-        "use-subscription": "^1.8.0"
+        "date-fns": "^2.30.0"
     }
 }
