--- a/packages/plugins/Collectible/package.json
+++ b/packages/plugins/Collectible/package.json
@@ -22,20 +22,14 @@
     "@masknet/typed-message": "workspace:^0.2.0",
     "@masknet/web3-helpers": "workspace:^",
     "@masknet/web3-hooks-base": "workspace:^",
-    "@masknet/web3-providers": "workspace:^",
     "@masknet/web3-shared-base": "workspace:^",
     "@masknet/web3-shared-evm": "workspace:^",
-    "@masknet/web3-shared-flow": "workspace:^",
     "@masknet/web3-shared-solana": "workspace:^",
     "@masknet/web3-telemetry": "workspace:^",
     "bignumber.js": "9.1.2",
     "date-fns": "^2.30.0",
-    "immer": "^10.0.2",
-    "react-use": "^17.4.0",
-    "ts-results-es": "^4.0.0",
     "use-subscription": "^1.8.0",
     "@types/use-subscription": "^1.0.0",
-    "unstated-next": "^1.1.0",
-    "urlcat": "^3.1.0"
+    "unstated-next": "^1.1.0"
   }
 }
