--- a/packages/plugins/Debugger/package.json
+++ b/packages/plugins/Debugger/package.json
@@ -20,20 +20,10 @@
     "@masknet/shared-base-ui": "workspace:^",
     "@masknet/theme": "workspace:^",
     "@masknet/web3-helpers": "workspace:^",
-    "@masknet/web3-contracts": "workspace:^",
     "@masknet/web3-hooks-base": "workspace:^",
-    "@masknet/web3-hooks-evm": "workspace:^",
     "@masknet/web3-telemetry": "workspace:^",
     "@masknet/web3-providers": "workspace:^",
     "@masknet/web3-shared-base": "workspace:^",
-    "@masknet/web3-shared-evm": "workspace:^",
-    "@masknet/web3-shared-flow": "workspace:^",
-    "@masknet/web3-shared-solana": "workspace:^",
-    "bignumber.js": "9.1.2",
-    "date-fns": "^2.30.0",
-    "react-use": "^17.4.0",
-    "urlcat": "^3.1.0",
-    "web3-core-helpers": "1.10.2",
-    "web3-utils": "1.10.2"
+    "@masknet/web3-shared-evm": "workspace:^"
   }
 }
