--- a/packages/plugins/GoPlusSecurity/package.json
+++ b/packages/plugins/GoPlusSecurity/package.json
@@ -34,12 +34,10 @@
     "@masknet/theme": "workspace:^",
     "@masknet/web3-providers": "workspace:^",
     "@masknet/web3-hooks-base": "workspace:^",
-    "@masknet/web3-hooks-evm": "workspace:^",
     "@masknet/web3-shared-base": "workspace:^",
     "@masknet/web3-shared-evm": "workspace:^",
     "@masknet/web3-telemetry": "workspace:^",
     "react-use": "^17.4.0",
-    "urlcat": "^3.1.0",
-    "wallet.ts": "1.0.1"
+    "urlcat": "^3.1.0"
   }
 }
