--- a/packages/plugins/NextID/package.json
+++ b/packages/plugins/NextID/package.json
@@ -23,8 +23,6 @@
     "@masknet/web3-providers": "workspace:^",
     "@masknet/web3-shared-base": "workspace:^",
     "@masknet/web3-shared-evm": "workspace:^",
-    "@masknet/web3-telemetry": "workspace:^",
-    "react-use": "^17.4.0",
-    "ts-results-es": "^4.0.0"
+    "react-use": "^17.4.0"
   }
 }
