--- a/packages/plugins/ProfileCard/package.json
+++ b/packages/plugins/ProfileCard/package.json
@@ -20,7 +20,6 @@
     "@masknet/shared-base": "workspace:^",
     "@masknet/theme": "workspace:^",
     "@masknet/web3-helpers": "workspace:^",
-    "@masknet/web3-providers": "workspace:^",
-    "ts-results-es": "^4.0.0"
+    "@masknet/web3-providers": "workspace:^"
   }
 }
