--- a/packages/plugins/ScamWarning/package.json
+++ b/packages/plugins/ScamWarning/package.json
@@ -15,12 +15,10 @@
   "dependencies": {
     "@masknet/icons": "workspace:^",
     "@masknet/plugin-infra": "workspace:^",
-    "@masknet/shared": "workspace:^",
     "@masknet/shared-base": "workspace:^",
     "@masknet/theme": "workspace:^",
     "@masknet/typed-message": "workspace:^",
     "@masknet/web3-providers": "workspace:^",
-    "react-use": "^17.4.0",
-    "use-subscription": "^1.8.0"
+    "react-use": "^17.4.0"
   }
 }
