--- a/packages/plugins/SmartPay/package.json
+++ b/packages/plugins/SmartPay/package.json
@@ -19,7 +19,6 @@
         "@masknet/shared-base": "workspace:^",
         "@masknet/shared-base-ui": "workspace:^",
         "@masknet/theme": "workspace: *",
-        "@masknet/web3-helpers": "workspace:^",
         "@masknet/web3-hooks-base": "workspace:^",
         "@masknet/web3-hooks-evm": "workspace:^",
         "@masknet/web3-providers": "workspace:^",
@@ -28,7 +27,6 @@
         "date-fns": "^2.30.0",
         "react-router-dom": "^6.14.2",
         "react-use": "^17.4.0",
-        "unstated-next": "^1.1.0",
-        "use-subscription": "1.6.0"
+        "unstated-next": "^1.1.0"
     }
 }
