--- a/packages/plugins/Transak/package.json
+++ b/packages/plugins/Transak/package.json
@@ -22,7 +22,6 @@
     "@masknet/web3-shared-evm": "workspace:^",
     "@types/json-stable-stringify": "^1.0.34",
     "json-stable-stringify": "^1.0.2",
-    "react-use": "^17.4.0",
-    "ts-results-es": "^4.0.0"
+    "react-use": "^17.4.0"
   }
 }
