--- a/packages/shared-base/package.json
+++ b/packages/shared-base/package.json
@@ -17,12 +17,10 @@
     "@masknet/encryption": "workspace:^",
     "@masknet/public-api": "workspace:^",
     "@masknet/typed-message": "workspace:^",
-    "@msgpack/msgpack": "^3.0.0-beta2",
     "@servie/events": "^3.0.0",
     "@types/dompurify": "^3.0.2",
     "@types/json-stable-stringify": "^1.0.34",
     "@types/react": "18.2.21",
-    "anchorme": "^2.1.2",
     "async-call-rpc": "^6.3.1",
     "bignumber.js": "9.1.2",
     "dompurify": "^3.0.5",
@@ -31,10 +29,8 @@
     "idb": "^7.1.1",
     "json-stable-stringify": "^1.0.2",
     "pvtsutils": "^1.3.5",
-    "tiny-secp256k1": "^2.2.3",
     "typeson": "^9.0.3",
-    "typeson-registry": "^8.0.0",
-    "web3-utils": "1.10.2"
+    "typeson-registry": "^8.0.0"
   },
   "devDependencies": {
     "@types/use-subscription": "^1.0.0"
