--- a/packages/web3-shared/base/package.json
+++ b/packages/web3-shared/base/package.json
@@ -11,19 +11,16 @@
   },
   "types": "./dist/index.d.ts",
   "dependencies": {
-    "use-subscription": "^1.8.0",
     "@masknet/public-api": "workspace:^",
     "@masknet/shared-base": "workspace:^",
     "@servie/events": "^3.0.0",
     "bignumber.js": "9.1.2",
     "date-fns": "^2.30.0",
-    "react-use": "^17.4.0",
     "urlcat": "^3.1.0",
     "millify": "^6.1.0",
     "web3-core-helpers": "1.10.2"
   },
   "devDependencies": {
-    "@types/use-subscription": "^1.0.0",
-    "mock-socket": "^9.2.1"
+    "@types/use-subscription": "^1.0.0"
   }
 }
