--- a/packages/web3-shared/flow/package.json
+++ b/packages/web3-shared/flow/package.json
@@ -15,8 +15,6 @@
     "@masknet/shared-base": "workspace:^",
     "@masknet/web3-constants": "workspace:^",
     "@masknet/web3-shared-base": "workspace:^",
-    "bignumber.js": "9.1.2",
-    "react-use": "^17.4.0",
-    "urlcat": "^3.1.0"
+    "react-use": "^17.4.0"
   }
 }
