--- a/packages/web3-shared/solana/package.json
+++ b/packages/web3-shared/solana/package.json
@@ -20,10 +20,7 @@
     "@masknet/web3-shared-base": "workspace:^",
     "@solana/web3.js": "^1.75.0",
     "@types/bs58": "^4.0.1",
-    "bignumber.js": "9.1.2",
     "bs58": "^5.0.0",
-    "buffer": "^6.0.3",
-    "react-use": "^17.4.0",
-    "urlcat": "^3.1.0"
+    "buffer": "^6.0.3"
   }
 }
