--- a/packages/plugins/MaskBox/package.json
+++ b/packages/plugins/MaskBox/package.json
@@ -29,6 +29,7 @@
     "@masknet/web3-shared-evm": "workspace:^",
     "@types/color": "^3.0.3",
     "bignumber.js": "9.1.2",
+    "buffer": "^6.0.3",
     "color": "^4.2.3",
     "date-fns": "^2.30.0",
     "react-use": "^17.4.0",
