--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -84,8 +84,7 @@
         "react-use": "^17.4.0",
         "stream-browserify": "^3.0.0",
         "tailwindcss": "^3.3.3",
-        "unstated-next": "^1.1.0",
-        "urlcat": "^3.1.0"
+        "unstated-next": "^1.1.0"
     },
     "devDependencies": {
         "@nice-labs/emit-file-webpack-plugin": "^1.1.4",
