--- a/packages/injected-script/package.json
+++ b/packages/injected-script/package.json
@@ -22,7 +22,6 @@
   },
   "devDependencies": {
     "rollup": "^3.28.1",
-    "rollup-plugin-swc3": "^0.10.1",
-    "rollup-plugin-terser": "^7.0.2"
+    "rollup-plugin-swc3": "^0.10.1"
   }
 }
