--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "cross-fetch": "^4.0.0",
     "cspell": "^7.2.0",
     "eslint": "8.48.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-i": "^2.28.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
@@ -105,7 +106,7 @@
     },
     "onlyBuiltDependencies": [],
     "peerDependencyRules": {
-"ignoreMissing": [
+      "ignoreMissing": [
         "react",
         "react-dom",
         "@types/node",
