--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@types/react-dom": "^18.2.7",
     "@typescript/lib-dom": "npm:@types/web@^0.0.115",
     "i18next": "^23.2.11",
+    "knip": "^2.33.3",
     "lodash-es": "^4.17.21",
     "react": "0.0.0-experimental-0a360642d-20230711",
     "react-dom": "0.0.0-experimental-0a360642d-20230711",
@@ -61,7 +62,6 @@
     "@masknet/cli": "workspace:^",
     "@masknet/config": "workspace:^",
     "@masknet/eslint-plugin": "^0.2.0",
-    "@masknet/serializer": "workspace:^",
     "@nice-labs/git-rev": "^3.5.1",
     "@swc/core": "1.3.81",
     "@types/lodash-es": "^4.17.9",
@@ -73,7 +73,6 @@
     "eslint": "8.48.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-i": "^2.28.1",
-    "eslint-plugin-import": "2.28.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-tss-unused-classes": "^1.0.1",
@@ -107,7 +106,7 @@
     },
     "onlyBuiltDependencies": [],
     "peerDependencyRules": {
-"ignoreMissing": [
+      "ignoreMissing": [
         "react",
         "react-dom",
         "@types/node",
