refactor: remove unused code

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,7 @@
     { "path": "./packages/plugins" }
   ],
   "compilerOptions": {
+    "noUnusedLocals": true,
     // Exclude everything by default. Include them in each project on-demand
     "types": ["masknet__global-types"],
     "resolveJsonModule": true,
