--- a/packages/app/tsconfig.json
+++ b/packages/app/tsconfig.json
@@ -8,22 +8,18 @@
   "include": ["./src"],
   "references": [
     { "path": "./tsconfig.worker.json" },
-    { "path": "../flags" },
-    { "path": "../base" },
-    { "path": "../shared" },
-    { "path": "../shared-base" },
-    { "path": "../shared-base-ui" },
-    { "path": "../shared-base" },
-    { "path": "../encryption" },
-    { "path": "../plugin-infra" },
-    { "path": "../plugins/Trader" },
-    { "path": "../plugins/CrossChainBridge" },
-    { "path": "../typed-message/base" },
-    { "path": "../typed-message/react" },
-    { "path": "../web3-helpers" },
-    { "path": "../web3-hooks/base" },
-    { "path": "../web3-providers" },
-    { "path": "../web3-shared/base" },
-    { "path": "../plugins/Trader" }
+    { "path": "../flags/tsconfig.json" },
+    { "path": "../base/tsconfig.json" },
+    { "path": "../shared/tsconfig.json" },
+    { "path": "../shared-base/tsconfig.json" },
+    { "path": "../shared-base-ui/tsconfig.json" },
+    { "path": "../encryption/tsconfig.json" },
+    { "path": "../plugin-infra/tsconfig.json" },
+    { "path": "../typed-message/base/tsconfig.json" },
+    { "path": "../typed-message/react/tsconfig.json" },
+    { "path": "../web3-helpers/tsconfig.json" },
+    { "path": "../web3-hooks/base/tsconfig.json" },
+    { "path": "../web3-providers/tsconfig.json" },
+    { "path": "../web3-shared/base/tsconfig.json" }
   ]
 }
