--- a/packages/injected-script/sdk/tsconfig.json
+++ b/packages/injected-script/sdk/tsconfig.json
@@ -19,5 +19,5 @@
     "Clover.ts",
     "utils.ts"
   ],
-  "references": [{ "path": "../shared/" }]
+  "references": [{ "path": "../shared/tsconfig.json" }]
 }
