--- a/packages/plugins/tsconfig.json
+++ b/packages/plugins/tsconfig.json
@@ -1,36 +1,36 @@
 {
   "extends": "../../tsconfig.json",
   "references": [
-    { "path": "./Approval/" },
-    { "path": "./ArtBlocks/" },
-    { "path": "./Avatar/" },
-    { "path": "./Calendar/" },
-    { "path": "./Claim/" },
-    { "path": "./Collectible/" },
-    { "path": "./CrossChainBridge/" },
-    { "path": "./CyberConnect/" },
-    { "path": "./Debugger/" },
-    { "path": "./FileService/" },
-    { "path": "./Gitcoin/" },
-    { "path": "./GoPlusSecurity/" },
-    { "path": "./Handle/" },
-    { "path": "./MaskBox/" },
-    { "path": "./NextID/" },
-    { "path": "./Pets/" },
-    { "path": "./ProfileCard/" },
-    { "path": "./RSS3/" },
-    { "path": "./RedPacket/" },
-    { "path": "./Savings/" },
-    { "path": "./ScamSniffer/" },
-    { "path": "./ScamWarning/" },
-    { "path": "./SmartPay/" },
-    { "path": "./Snapshot/" },
-    { "path": "./SwitchLogo/" },
-    { "path": "./Tips/" },
-    { "path": "./Trader/" },
-    { "path": "./Transak/" },
-    { "path": "./VCent/" },
-    { "path": "./Web3Profile/" },
-    { "path": "./template/" }
+    { "path": "./Approval/tsconfig.json" },
+    { "path": "./ArtBlocks/tsconfig.json" },
+    { "path": "./Avatar/tsconfig.json" },
+    { "path": "./Calendar/tsconfig.json" },
+    { "path": "./Claim/tsconfig.json" },
+    { "path": "./Collectible/tsconfig.json" },
+    { "path": "./CrossChainBridge/tsconfig.json" },
+    { "path": "./CyberConnect/tsconfig.json" },
+    { "path": "./Debugger/tsconfig.json" },
+    { "path": "./FileService/tsconfig.json" },
+    { "path": "./Gitcoin/tsconfig.json" },
+    { "path": "./GoPlusSecurity/tsconfig.json" },
+    { "path": "./Handle/tsconfig.json" },
+    { "path": "./MaskBox/tsconfig.json" },
+    { "path": "./NextID/tsconfig.json" },
+    { "path": "./Pets/tsconfig.json" },
+    { "path": "./ProfileCard/tsconfig.json" },
+    { "path": "./RSS3/tsconfig.json" },
+    { "path": "./RedPacket/tsconfig.json" },
+    { "path": "./Savings/tsconfig.json" },
+    { "path": "./ScamSniffer/tsconfig.json" },
+    { "path": "./ScamWarning/tsconfig.json" },
+    { "path": "./SmartPay/tsconfig.json" },
+    { "path": "./Snapshot/tsconfig.json" },
+    { "path": "./SwitchLogo/tsconfig.json" },
+    { "path": "./Tips/tsconfig.json" },
+    { "path": "./Trader/tsconfig.json" },
+    { "path": "./Transak/tsconfig.json" },
+    { "path": "./VCent/tsconfig.json" },
+    { "path": "./Web3Profile/tsconfig.json" },
+    { "path": "./template/tsconfig.json" }
   ]
 }
