--- a/packages/shared-base-ui/tsconfig.json
+++ b/packages/shared-base-ui/tsconfig.json
@@ -7,5 +7,5 @@
   },
   "include": ["./src", "./src/**/*.json"],
   // Only type-level dependency.
-  "references": [{ "path": "../public-api" }, { "path": "../shared-base" }, { "path": "../flags/" }]
+  "references": [{ "path": "../shared-base/tsconfig.json" }, { "path": "../flags/tsconfig.json" }]
 }
