--- a/packages/encryption/tsconfig.json
+++ b/packages/encryption/tsconfig.json
@@ -6,5 +6,5 @@
     "tsBuildInfoFile": "./dist/.tsbuildinfo"
   },
   "include": ["./src/**/*"],
-  "references": [{ "path": "../base" }, { "path": "../typed-message/base" }]
+  "references": [{ "path": "../base/tsconfig.json" }, { "path": "../typed-message/base/tsconfig.json" }]
 }
