--- a/packages/injected-script/main/tsconfig.json
+++ b/packages/injected-script/main/tsconfig.json
@@ -6,5 +6,5 @@
     "tsBuildInfoFile": "../dist/main.tsbuildinfo"
   },
   "include": ["./"],
-  "references": [{ "path": "../shared/" }]
+  "references": [{ "path": "../shared/tsconfig.json" }]
 }
