--- a/packages/mask/background/tsconfig.json
+++ b/packages/mask/background/tsconfig.json
@@ -11,15 +11,15 @@
   },
   "include": ["./"],
   "references": [
-    { "path": "../shared" },
-    { "path": "../utils-pure" },
-    { "path": "../../encryption" },
-    { "path": "../../mask-sdk/server/" },
-    { "path": "../../backup-format" },
-    { "path": "../../gun-utils" },
-    { "path": "../../flags" },
-    { "path": "../../web3-telemetry" },
-    { "path": "../../web3-providers" },
-    { "path": "../../sandboxed-plugin-runtime/src/background" }
+    { "path": "../shared/tsconfig.json" },
+    { "path": "../utils-pure/tsconfig.json" },
+    { "path": "../../encryption/tsconfig.json" },
+    { "path": "../../mask-sdk/server/tsconfig.json" },
+    { "path": "../../backup-format/tsconfig.json" },
+    { "path": "../../gun-utils/tsconfig.json" },
+    { "path": "../../flags/tsconfig.json" },
+    { "path": "../../web3-telemetry/tsconfig.json" },
+    { "path": "../../web3-providers/tsconfig.json" },
+    { "path": "../../sandboxed-plugin-runtime/src/background/tsconfig.json" }
   ]
 }
