--- a/packages/mask/dashboard/tsconfig.json
+++ b/packages/mask/dashboard/tsconfig.json
@@ -7,22 +7,16 @@
   },
   "include": ["./", "./**/*.json"],
   "references": [
-    { "path": "../shared-ui" },
-    { "path": "../../public-api" },
-    { "path": "../../theme/" },
-    { "path": "../../web3-hooks/base/" },
-    { "path": "../../web3-hooks/evm/" },
-    { "path": "../../web3-telemetry" },
-    { "path": "../../web3-shared/base/" },
-    { "path": "../../web3-shared/evm/" },
-    { "path": "../../web3-shared/flow/" },
-    { "path": "../../web3-shared/solana/" },
-    { "path": "../../web3-helpers" },
-    { "path": "../../web3-providers" },
-    { "path": "../../plugin-infra" },
-    { "path": "../../backup-format/" },
-    { "path": "../../shared-base" },
-    { "path": "../../shared-base-ui" },
-    { "path": "../../types" }
+    { "path": "../shared-ui/tsconfig.json" },
+    { "path": "../../theme/tsconfig.json" },
+    { "path": "../../web3-hooks/base/tsconfig.json" },
+    { "path": "../../web3-telemetry/tsconfig.json" },
+    { "path": "../../web3-shared/base/tsconfig.json" },
+    { "path": "../../web3-shared/evm/tsconfig.json" },
+    { "path": "../../web3-providers/tsconfig.json" },
+    { "path": "../../plugin-infra/tsconfig.json" },
+    { "path": "../../backup-format/tsconfig.json" },
+    { "path": "../../shared-base/tsconfig.json" },
+    { "path": "../../shared-base-ui/tsconfig.json" }
   ]
 }
