--- a/packages/mask/src/tsconfig.json
+++ b/packages/mask/src/tsconfig.json
@@ -8,40 +8,34 @@
   },
   "include": ["./", "./**/*.json"],
   "references": [
-    { "path": "../../public-api" },
-    { "path": "../../shared" },
-    { "path": "../../backup-format" },
-    { "path": "../../shared-base" },
-    { "path": "../../shared-base-ui" },
-    { "path": "../../typed-message/base" },
-    { "path": "../../typed-message/react" },
-    { "path": "../../web3-hooks/base" },
-    { "path": "../../web3-hooks/evm" },
-    { "path": "../../web3-providers" },
-    { "path": "../../web3-shared/base" },
-    { "path": "../../web3-shared/evm" },
-    { "path": "../../web3-shared/flow" },
-    { "path": "../../web3-shared/solana" },
-    { "path": "../../web3-telemetry" },
-    { "path": "../../theme" },
-    { "path": "../../plugin-infra" },
-    { "path": "../../plugins/GoPlusSecurity" },
-    { "path": "../../plugins/Transak" },
-    { "path": "../../plugins/Avatar" },
-    { "path": "../../plugins/Tips" },
-    { "path": "../../injected-script/sdk" },
-    { "path": "../../mask-sdk/server" },
-    { "path": "../../plugins/Trader" },
-    { "path": "../../plugins/SwitchLogo" },
-    { "path": "../../plugins/Calendar" },
-    { "path": "../../sandboxed-plugin-runtime/src/site-adaptor" },
-    { "path": "../web-workers" },
-    { "path": "../utils-pure" },
-    { "path": "../background" },
-    { "path": "../shared" },
-    { "path": "../shared-ui" },
-    { "path": "../dashboard/" },
-    { "path": "../../types" },
-    { "path": "../entry-sdk/" }
+    { "path": "../../public-api/tsconfig.json" },
+    { "path": "../../shared/tsconfig.json" },
+    { "path": "../../shared-base/tsconfig.json" },
+    { "path": "../../shared-base-ui/tsconfig.json" },
+    { "path": "../../typed-message/base/tsconfig.json" },
+    { "path": "../../typed-message/react/tsconfig.json" },
+    { "path": "../../web3-hooks/base/tsconfig.json" },
+    { "path": "../../web3-hooks/evm/tsconfig.json" },
+    { "path": "../../web3-providers/tsconfig.json" },
+    { "path": "../../web3-shared/base/tsconfig.json" },
+    { "path": "../../web3-shared/evm/tsconfig.json" },
+    { "path": "../../web3-telemetry/tsconfig.json" },
+    { "path": "../../theme/tsconfig.json" },
+    { "path": "../../plugin-infra/tsconfig.json" },
+    { "path": "../../plugins/Avatar/tsconfig.json" },
+    { "path": "../../plugins/Tips/tsconfig.json" },
+    { "path": "../../injected-script/sdk/tsconfig.json" },
+    { "path": "../../plugins/Trader/tsconfig.json" },
+    { "path": "../../plugins/SwitchLogo/tsconfig.json" },
+    { "path": "../../plugins/Calendar/tsconfig.json" },
+    { "path": "../../sandboxed-plugin-runtime/src/site-adaptor/tsconfig.json" },
+    { "path": "../web-workers/tsconfig.json" },
+    { "path": "../utils-pure/tsconfig.json" },
+    { "path": "../background/tsconfig.json" },
+    { "path": "../shared/tsconfig.json" },
+    { "path": "../shared-ui/tsconfig.json" },
+    { "path": "../dashboard/tsconfig.json" },
+    { "path": "../../types/tsconfig.json" },
+    { "path": "../entry-sdk/tsconfig.json" }
   ]
 }
