--- a/packages/mask/tsconfig.json
+++ b/packages/mask/tsconfig.json
@@ -3,10 +3,10 @@
   "files": [],
   "references": [
     // this folder contains codes to be moved out
-    { "path": "./src" },
+    { "path": "./src/tsconfig.json" },
     // entries of Mask extension
-    { "path": "./dashboard/" },
-    { "path": "./devtools" },
-    { "path": "./entry-sdk/" }
+    { "path": "./dashboard/tsconfig.json" },
+    { "path": "./devtools/tsconfig.json" },
+    { "path": "./entry-sdk/tsconfig.json" }
   ]
 }
