--- a/packages/mask/utils-pure/tsconfig.json
+++ b/packages/mask/utils-pure/tsconfig.json
@@ -7,5 +7,5 @@
     "emitDeclarationOnly": true
   },
   "include": ["./"],
-  "references": [{ "path": "../../shared-base" }]
+  "references": [{ "path": "../../shared-base/tsconfig.json" }]
 }
