--- a/packages/plugin-infra/tsconfig.json
+++ b/packages/plugin-infra/tsconfig.json
@@ -7,16 +7,13 @@
   },
   "include": ["./src"],
   "references": [
-    { "path": "../flags" },
-    { "path": "../shared-base" },
-    { "path": "../shared-base-ui" },
-    { "path": "../theme" },
-    { "path": "../web3-helpers" },
-    { "path": "../web3-shared/base" },
-    { "path": "../web3-shared/evm" },
-    { "path": "../web3-shared/flow" },
-    { "path": "../web3-shared/solana" },
-    { "path": "../typed-message/base" },
-    { "path": "../encryption" }
+    { "path": "../flags/tsconfig.json" },
+    { "path": "../shared-base/tsconfig.json" },
+    { "path": "../shared-base-ui/tsconfig.json" },
+    { "path": "../theme/tsconfig.json" },
+    { "path": "../web3-helpers/tsconfig.json" },
+    { "path": "../web3-shared/base/tsconfig.json" },
+    { "path": "../typed-message/base/tsconfig.json" },
+    { "path": "../encryption/tsconfig.json" }
   ]
 }
