--- a/packages/plugins/Collectible/tsconfig.json
+++ b/packages/plugins/Collectible/tsconfig.json
@@ -7,11 +7,11 @@
   },
   "include": ["src", "src/**/*.json"],
   "references": [
-    { "path": "../../plugin-infra" },
-    { "path": "../../shared-base" },
-    { "path": "../../web3-shared/base" },
-    { "path": "../../web3-shared/evm" },
-    { "path": "../../web3-shared/solana" },
-    { "path": "../../shared" }
+    { "path": "../../plugin-infra/tsconfig.json" },
+    { "path": "../../shared-base/tsconfig.json" },
+    { "path": "../../web3-shared/base/tsconfig.json" },
+    { "path": "../../web3-shared/evm/tsconfig.json" },
+    { "path": "../../web3-shared/solana/tsconfig.json" },
+    { "path": "../../shared/tsconfig.json" }
   ]
 }
