--- a/packages/plugins/CyberConnect/tsconfig.json
+++ b/packages/plugins/CyberConnect/tsconfig.json
@@ -7,14 +7,14 @@
   },
   "include": ["src", "src/**/*.json"],
   "references": [
-    { "path": "../../plugin-infra" },
-    { "path": "../../theme" },
-    { "path": "../../shared" },
-    { "path": "../../shared-base" },
-    { "path": "../../web3-hooks/base" },
-    { "path": "../../web3-providers" },
-    { "path": "../../web3-shared/base" },
-    { "path": "../../web3-shared/evm" },
-    { "path": "../../typed-message/base" }
+    { "path": "../../plugin-infra/tsconfig.json" },
+    { "path": "../../theme/tsconfig.json" },
+    { "path": "../../shared/tsconfig.json" },
+    { "path": "../../shared-base/tsconfig.json" },
+    { "path": "../../web3-hooks/base/tsconfig.json" },
+    { "path": "../../web3-providers/tsconfig.json" },
+    { "path": "../../web3-shared/base/tsconfig.json" },
+    { "path": "../../web3-shared/evm/tsconfig.json" },
+    { "path": "../../typed-message/base/tsconfig.json" }
   ]
 }
