--- a/packages/plugins/Debugger/tsconfig.json
+++ b/packages/plugins/Debugger/tsconfig.json
@@ -7,13 +7,13 @@
   },
   "include": ["src", "src/**/*.json"],
   "references": [
-    { "path": "../../plugin-infra" },
-    { "path": "../../web3-helpers" },
-    { "path": "../../web3-hooks/base" },
-    { "path": "../../web3-hooks/evm" },
-    { "path": "../../web3-telemetry" },
-    { "path": "../../web3-providers" },
-    { "path": "../../shared" },
-    { "path": "../../shared-base-ui" }
+    { "path": "../../plugin-infra/tsconfig.json" },
+    { "path": "../../web3-helpers/tsconfig.json" },
+    { "path": "../../web3-hooks/base/tsconfig.json" },
+    { "path": "../../web3-hooks/evm/tsconfig.json" },
+    { "path": "../../web3-telemetry/tsconfig.json" },
+    { "path": "../../web3-providers/tsconfig.json" },
+    { "path": "../../shared/tsconfig.json" },
+    { "path": "../../shared-base-ui/tsconfig.json" }
   ]
 }
