--- a/packages/plugins/GoPlusSecurity/tsconfig.json
+++ b/packages/plugins/GoPlusSecurity/tsconfig.json
@@ -6,5 +6,9 @@
     "tsBuildInfoFile": "dist/.tsbuildinfo"
   },
   "include": ["src", "src/**/*.json"],
-  "references": [{ "path": "../../plugin-infra" }, { "path": "../../shared" }, { "path": "../../web3-providers" }]
+  "references": [
+    { "path": "../../plugin-infra/tsconfig.json" },
+    { "path": "../../shared/tsconfig.json" },
+    { "path": "../../web3-providers/tsconfig.json" }
+  ]
 }
