--- a/packages/plugins/Pets/tsconfig.json
+++ b/packages/plugins/Pets/tsconfig.json
@@ -6,5 +6,9 @@
     "tsBuildInfoFile": "dist/.tsbuildinfo"
   },
   "include": ["src", "src/**/*.json"],
-  "references": [{ "path": "../../plugin-infra" }, { "path": "../../shared-base" }, { "path": "../../shared" }]
+  "references": [
+    { "path": "../../plugin-infra/tsconfig.json" },
+    { "path": "../../shared-base/tsconfig.json" },
+    { "path": "../../shared/tsconfig.json" }
+  ]
 }
