--- a/packages/plugins/VCent/tsconfig.json
+++ b/packages/plugins/VCent/tsconfig.json
@@ -7,10 +7,10 @@
   },
   "include": ["src", "src/**/*.json"],
   "references": [
-    { "path": "../../plugin-infra" },
-    { "path": "../../shared-base" },
-    { "path": "../../shared" },
-    { "path": "../../web3-hooks/base" },
-    { "path": "../../web3-providers" }
+    { "path": "../../plugin-infra/tsconfig.json" },
+    { "path": "../../shared-base/tsconfig.json" },
+    { "path": "../../shared/tsconfig.json" },
+    { "path": "../../web3-hooks/base/tsconfig.json" },
+    { "path": "../../web3-providers/tsconfig.json" }
   ]
 }
