--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -7,19 +7,19 @@
   },
   "include": ["./src", "./src/**/*.json"],
   "references": [
-    { "path": "../theme" },
-    { "path": "../plugin-infra" },
-    { "path": "../public-api" },
-    { "path": "../shared-base" },
-    { "path": "../shared-base-ui" },
-    { "path": "../web3-hooks/base" },
-    { "path": "../web3-hooks/evm" },
-    { "path": "../web3-shared/base" },
-    { "path": "../web3-shared/evm" },
-    { "path": "../web3-shared/flow" },
-    { "path": "../web3-shared/solana" },
-    { "path": "../web3-helpers" },
-    { "path": "../web3-providers" },
-    { "path": "../typed-message/react" }
+    { "path": "../theme/tsconfig.json" },
+    { "path": "../plugin-infra/tsconfig.json" },
+    { "path": "../public-api/tsconfig.json" },
+    { "path": "../shared-base/tsconfig.json" },
+    { "path": "../shared-base-ui/tsconfig.json" },
+    { "path": "../web3-hooks/base/tsconfig.json" },
+    { "path": "../web3-hooks/evm/tsconfig.json" },
+    { "path": "../web3-shared/base/tsconfig.json" },
+    { "path": "../web3-shared/evm/tsconfig.json" },
+    { "path": "../web3-shared/flow/tsconfig.json" },
+    { "path": "../web3-shared/solana/tsconfig.json" },
+    { "path": "../web3-helpers/tsconfig.json" },
+    { "path": "../web3-providers/tsconfig.json" },
+    { "path": "../typed-message/react/tsconfig.json" }
   ]
 }
