--- a/packages/theme/tsconfig.json
+++ b/packages/theme/tsconfig.json
@@ -6,5 +6,5 @@
     "tsBuildInfoFile": "./dist/.tsbuildinfo"
   },
   "include": ["./src", "./src/**/*.json"],
-  "references": [{ "path": "../shared-base" }, { "path": "../flags/" }]
+  "references": [{ "path": "../shared-base/tsconfig.json" }, { "path": "../flags/tsconfig.json" }]
 }
