--- a/packages/typed-message/react/tsconfig.json
+++ b/packages/typed-message/react/tsconfig.json
@@ -6,5 +6,5 @@
     "tsBuildInfoFile": "./dist/.tsbuildinfo"
   },
   "include": ["./src"],
-  "references": [{ "path": "../base" }]
+  "references": [{ "path": "../base/tsconfig.json" }]
 }
