--- a/packages/web3-helpers/tsconfig.json
+++ b/packages/web3-helpers/tsconfig.json
@@ -7,10 +7,10 @@
   },
   "include": ["./src", "./src/**/*.json"],
   "references": [
-    { "path": "../shared-base" },
-    { "path": "../web3-shared/base" },
-    { "path": "../web3-shared/evm" },
-    { "path": "../web3-shared/solana" },
-    { "path": "../web3-shared/flow" }
+    { "path": "../shared-base/tsconfig.json" },
+    { "path": "../web3-shared/base/tsconfig.json" },
+    { "path": "../web3-shared/evm/tsconfig.json" },
+    { "path": "../web3-shared/solana/tsconfig.json" },
+    { "path": "../web3-shared/flow/tsconfig.json" }
   ]
 }
