--- a/packages/web3-hooks/base/tsconfig.json
+++ b/packages/web3-hooks/base/tsconfig.json
@@ -7,10 +7,13 @@
   },
   "include": ["./src", "./src/**/*.json"],
   "references": [
-    { "path": "../../web3-providers" },
-    { "path": "../../web3-telemetry" },
-    { "path": "../../web3-shared/base" },
-    { "path": "../../shared-base" },
-    { "path": "../../injected-script/sdk" }
+    { "path": "../../web3-providers/tsconfig.json" },
+    { "path": "../../web3-helpers/tsconfig.json" },
+    { "path": "../../web3-telemetry/tsconfig.json" },
+    { "path": "../../web3-shared/base/tsconfig.json" },
+    { "path": "../../web3-shared/flow/tsconfig.json" },
+    { "path": "../../web3-shared/solana/tsconfig.json" },
+    { "path": "../../shared-base/tsconfig.json" },
+    { "path": "../../shared-base-ui/tsconfig.json" }
   ]
 }
