--- a/packages/web3-providers/tsconfig.json
+++ b/packages/web3-providers/tsconfig.json
@@ -7,13 +7,16 @@
   },
   "include": ["./src", "./src/**/*.json"],
   "references": [
-    { "path": "../flags" },
-    { "path": "../web3-helpers" },
-    { "path": "../web3-shared/base" },
-    { "path": "../web3-shared/evm" },
-    { "path": "../web3-shared/flow" },
-    { "path": "../web3-shared/solana" },
-    { "path": "../web3-telemetry" },
-    { "path": "../shared-base-ui/" }
+    { "path": "../flags/tsconfig.json" },
+    { "path": "../injected-script/sdk/tsconfig.json" },
+    { "path": "../public-api/tsconfig.json" },
+    { "path": "../shared-base/tsconfig.json" },
+    { "path": "../shared-base-ui/tsconfig.json" },
+    { "path": "../web3-helpers/tsconfig.json" },
+    { "path": "../web3-shared/base/tsconfig.json" },
+    { "path": "../web3-shared/evm/tsconfig.json" },
+    { "path": "../web3-shared/flow/tsconfig.json" },
+    { "path": "../web3-shared/solana/tsconfig.json" },
+    { "path": "../web3-telemetry/tsconfig.json" }
   ]
 }
