--- a/packages/web3-shared/evm/tsconfig.json
+++ b/packages/web3-shared/evm/tsconfig.json
@@ -7,11 +7,10 @@
   },
   "include": ["./src", "./src/**/*.json"],
   "references": [
-    { "path": "../base" },
-    { "path": "../../flags" },
-    { "path": "../../injected-script/sdk" },
-    { "path": "../../polyfills" },
-    { "path": "../../shared-base" },
-    { "path": "../../web3-telemetry" }
+    { "path": "../base/tsconfig.json" },
+    { "path": "../../flags/tsconfig.json" },
+    { "path": "../../shared-base/tsconfig.json" },
+    { "path": "../../web3-telemetry/tsconfig.json" },
+    { "path": "../../web3-shared/base/tsconfig.json" }
   ]
 }
