--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,14 +2,12 @@
   "extends": "./node_modules/@masknet/config/tsconfig.json",
   "references": [
     // Only list top-level projects here
-    { "path": "./packages/polyfills/" },
-    { "path": "./packages/app/" },
-    { "path": "./packages/mask/" },
-    { "path": "./packages/injected-script/main" },
-    { "path": "./packages/mask-sdk/main" },
-    { "path": "./packages/mask-sdk/public-api" },
-    { "path": "./packages/flags/" },
-    { "path": "./packages/sentry/" },
+    { "path": "./packages/polyfills/tsconfig.json" },
+    { "path": "./packages/app/tsconfig.json" },
+    { "path": "./packages/mask/tsconfig.json" },
+    { "path": "./packages/injected-script/main/tsconfig.json" },
+    { "path": "./packages/mask-sdk/main/tsconfig.json" },
+    { "path": "./packages/mask-sdk/public-api/tsconfig.json" },
     // Tests
     // @masknet/scripts: insert-here 1
     { "path": "./packages/base/tsconfig.tests.json" },
@@ -20,7 +18,7 @@
     { "path": "./packages/web3-hooks/base/tsconfig.tests.json" },
     { "path": "./packages/web3-shared/base/tsconfig.tests.json" },
     // All plugins should be type checked too
-    { "path": "./packages/plugins" }
+    { "path": "./packages/plugins/tsconfig.json" }
   ],
   "compilerOptions": {
     // Exclude everything by default. Include them in each project on-demand
@@ -56,89 +54,91 @@
       // We use "paths" to map the Node-style import path back to the relative style,
       // therefore TypeScript can check the missing dependencies again.
 
-      // This will not introduce problems like mapping "@src/" to "/packages/a/src" which is problematic,
+      // This will not introduce problems like mapping "@src/" to "/packages/a/src/index.ts" which is problematic,
       // because those projects (if they're correctly configured) is installed in the node_modules,
       // so if any toolchain does not support the "paths" feature, it will still work.
 
       // This will bring another problem: now we can reference a project without installing it as a monorepo dependency,
       // which is unwanted. We need to take care of this.
 
-      "@masknet/app": ["./packages/app/src"],
-      "@masknet/backup-format": ["./packages/backup-format/src"],
-      "@masknet/encryption": ["./packages/encryption/src"],
-      "@masknet/gun-utils": ["./packages/gun-utils/src"],
-      "@masknet/flags": ["./packages/flags/src"],
-      "@masknet/injected-script": ["./packages/injected-script/sdk"],
-      // @masknet/mask is not listed. it does not have a exports/main field in the package.json.
-      "@masknet/mask-sdk": ["./packages/mask-sdk/server"],
+      "@masknet/backup-format": ["./packages/backup-format/src/index.ts"],
+      "@masknet/base": ["./packages/base/src/index.ts"],
+      "@masknet/encryption": ["./packages/encryption/src/index.ts"],
+      "@masknet/flags": ["./packages/flags/src/index.ts"],
+      "@masknet/flags/build-info": ["./packages/flags/src/flags/buildInfo.ts"],
+      "@masknet/gun-utils": ["./packages/gun-utils/src/index.ts"],
+      "@masknet/injected-script": ["./packages/injected-script/sdk/index.ts"],
+      "@masknet/mask-sdk": ["./packages/mask-sdk/server/index.ts"],
+      "@masknet/mask-sdk/shared": ["./packages/mask-sdk/shared/index.ts"],
       "@masknet/plugin-infra/dom": ["./packages/plugin-infra/src/entry-dom.ts"],
       "@masknet/plugin-infra/dom/context": ["./packages/plugin-infra/src/dom/context.ts"],
       "@masknet/plugin-infra/background-worker": ["./packages/plugin-infra/src/entry-background-worker.ts"],
       "@masknet/plugin-infra/dashboard": ["./packages/plugin-infra/src/entry-dashboard.ts"],
       "@masknet/plugin-infra/content-script/context": ["./packages/plugin-infra/src/site-adaptor/context.ts"],
       "@masknet/plugin-infra/content-script": ["./packages/plugin-infra/src/entry-content-script.ts"],
-      "@masknet/plugin-infra": ["./packages/plugin-infra/src"],
+      "@masknet/plugin-infra": ["./packages/plugin-infra/src/entry.ts"],
       "@masknet/global-types/*": ["./packages/polyfills/types/*"],
-      "@masknet/public-api": ["./packages/public-api/src"],
-      // @masknet/scripts is not listed. It does not mean to be installed as a dependency and not join the type check.
-      "@masknet/shared": ["./packages/shared/src"],
-      "@masknet/shared-base": ["./packages/shared-base/src"],
-      "@masknet/shared-base-ui": ["./packages/shared-base-ui/src"],
-      "@masknet/theme": ["./packages/theme/src"],
-      // @masknet/web3-constants is not listed. It is not a TS project (only contains JSON files).
-      // @masknet/web3-contracts is not listed. It is not a TS project (only contains generated JSON and .d.ts files).
-      "@masknet/web3-telemetry": ["./packages/web3-telemetry/src"],
-      "@masknet/web3-helpers": ["./packages/web3-helpers/src"],
-      "@masknet/web3-providers": ["./packages/web3-providers/src"],
-      "@masknet/web3-hooks-base": ["./packages/web3-hooks/base/src"],
-      "@masknet/web3-hooks-evm": ["./packages/web3-hooks/evm/src"],
-      "@masknet/web3-shared-base": ["./packages/web3-shared/base/src"],
-      "@masknet/web3-shared-evm": ["./packages/web3-shared/evm/src"],
-      "@masknet/web3-shared-flow": ["./packages/web3-shared/flow/src"],
-      "@masknet/web3-shared-solana": ["./packages/web3-shared/solana/src"],
-      "@masknet/typed-message": ["./packages/typed-message/base"],
-      "@masknet/typed-message-react": ["./packages/typed-message/react"],
-      "@masknet/types": ["./packages/types/src"],
+      "@masknet/public-api": ["./packages/public-api/src/index.ts"],
       "@masknet/sandboxed-plugin-runtime": ["./packages/sandboxed-plugin-runtime/src/runtime/export.ts"],
-      "@masknet/sandboxed-plugin-runtime/background": ["./packages/sandboxed-plugin-runtime/src/background"],
-      "@masknet/sandboxed-plugin-runtime/site-adaptor": ["./packages/sandboxed-plugin-runtime/src/site-adaptor"],
+      "@masknet/sandboxed-plugin-runtime/background": ["./packages/sandboxed-plugin-runtime/src/background/index.ts"],
+      "@masknet/sandboxed-plugin-runtime/site-adaptor": [
+        "./packages/sandboxed-plugin-runtime/src/site-adaptor/index.ts"
+      ],
       "@masknet/sandboxed-plugin-runtime/extension-page": ["./packages/sandboxed-plugin-runtime/src/extension-page"],
-      "@masknet/base": ["./packages/base/src"],
-      "@masknet/config": ["./packages/config/src"],
+      "@masknet/shared": ["./packages/shared/src/index.ts"],
+      "@masknet/shared-base": ["./packages/shared-base/src/index.ts"],
+      "@masknet/shared-base-ui": ["./packages/shared-base-ui/src/index.ts"],
+      "@masknet/theme": ["./packages/theme/src/index.ts"],
+      "@masknet/typed-message": ["./packages/typed-message/base/src/index.ts"],
+      "@masknet/typed-message-react": ["./packages/typed-message/react/src/index.ts"],
+      "@masknet/types": ["./packages/types/src/index.ts"],
+      "@masknet/web3-helpers": ["./packages/web3-helpers/src/index.ts"],
+      "@masknet/web3-hooks-base": ["./packages/web3-hooks/base/src/index.ts"],
+      "@masknet/web3-hooks-evm": ["./packages/web3-hooks/evm/src/index.ts"],
+      "@masknet/web3-providers": ["./packages/web3-providers/src/entry.ts"],
+      "@masknet/web3-providers/helpers": ["./packages/web3-providers/src/entry-helpers.ts"],
+      "@masknet/web3-providers/types": ["./packages/web3-providers/src/entry-types.ts"],
+      "@masknet/web3-shared-base": ["./packages/web3-shared/base/src/index.ts"],
+      "@masknet/web3-shared-evm": ["./packages/web3-shared/evm/src/index.ts"],
+      "@masknet/web3-shared-flow": ["./packages/web3-shared/flow/src/index.ts"],
+      "@masknet/web3-shared-solana": ["./packages/web3-shared/solana/src/index.ts"],
+      "@masknet/web3-telemetry": ["./packages/web3-telemetry/src/entry.ts"],
+      "@masknet/web3-telemetry/helpers": ["./packages/web3-telemetry/src/entry-helpers.ts"],
+      "@masknet/web3-telemetry/types": ["./packages/web3-telemetry/src/entry-types.ts"],
       // @masknet/scripts: insert-here
 
       // Plugins
-      "@masknet/plugin-debugger": ["./packages/plugins/Debugger/src"],
-      "@masknet/plugin-file-service": ["./packages/plugins/FileService/src"],
-      "@masknet/plugin-rss3": ["./packages/plugins/RSS3/src"],
-      "@masknet/plugin-template": ["./packages/plugins/template/src"],
-      "@masknet/plugin-cyberconnect": ["./packages/plugins/CyberConnect/src"],
-      "@masknet/plugin-go-plus-security": ["./packages/plugins/GoPlusSecurity/src"],
-      "@masknet/plugin-cross-chain-bridge": ["./packages/plugins/CrossChainBridge/src"],
-      "@masknet/plugin-web3-profile": ["./packages/plugins/Web3Profile/src"],
-      "@masknet/plugin-handle": ["./packages/plugins/Handle/src"],
-      "@masknet/plugin-approval": ["./packages/plugins/Approval/src"],
-      "@masknet/plugin-scam-warning": ["./packages/plugins/ScamWarning/src"],
-      "@masknet/plugin-gitcoin": ["./packages/plugins/Gitcoin/src"],
-      "@masknet/plugin-avatar": ["./packages/plugins/Avatar/src"],
-      "@masknet/plugin-redpacket": ["./packages/plugins/RedPacket/src"],
-      "@masknet/plugin-maskbox": ["./packages/plugins/MaskBox/src"],
-      "@masknet/plugin-smart-pay": ["./packages/plugins/SmartPay/src"],
-      "@masknet/plugin-transak": ["./packages/plugins/Transak/src"],
-      "@masknet/plugin-vcent": ["./packages/plugins/VCent/src"],
-      "@masknet/plugin-collectible": ["./packages/plugins/Collectible/src"],
-      "@masknet/plugin-claim": ["./packages/plugins/Claim/src"],
-      "@masknet/plugin-artblocks": ["./packages/plugins/ArtBlocks/src"],
-      "@masknet/plugin-pets": ["./packages/plugins/Pets/src"],
-      "@masknet/plugin-tips": ["./packages/plugins/Tips/src"],
-      "@masknet/plugin-nextid": ["./packages/plugins/NextID/src"],
-      "@masknet/plugin-trader": ["./packages/plugins/Trader/src"],
-      "@masknet/plugin-profilecard": ["./packages/plugins/ProfileCard/src"],
-      "@masknet/plugin-savings": ["./packages/plugins/Savings/src"],
-      "@masknet/plugin-snapshot": ["./packages/plugins/Snapshot/src"],
+      "@masknet/plugin-debugger": ["./packages/plugins/Debugger/src/index.ts"],
+      "@masknet/plugin-file-service": ["./packages/plugins/FileService/src/index.ts"],
+      "@masknet/plugin-rss3": ["./packages/plugins/RSS3/src/index.ts"],
+      "@masknet/plugin-template": ["./packages/plugins/template/src/index.ts"],
+      "@masknet/plugin-cyberconnect": ["./packages/plugins/CyberConnect/src/index.ts"],
+      "@masknet/plugin-go-plus-security": ["./packages/plugins/GoPlusSecurity/src/index.ts"],
+      "@masknet/plugin-cross-chain-bridge": ["./packages/plugins/CrossChainBridge/src/index.ts"],
+      "@masknet/plugin-web3-profile": ["./packages/plugins/Web3Profile/src/index.ts"],
+      "@masknet/plugin-handle": ["./packages/plugins/Handle/src/index.ts"],
+      "@masknet/plugin-approval": ["./packages/plugins/Approval/src/index.ts"],
+      "@masknet/plugin-scam-warning": ["./packages/plugins/ScamWarning/src/index.ts"],
+      "@masknet/plugin-gitcoin": ["./packages/plugins/Gitcoin/src/index.ts"],
+      "@masknet/plugin-avatar": ["./packages/plugins/Avatar/src/index.ts"],
+      "@masknet/plugin-redpacket": ["./packages/plugins/RedPacket/src/index.ts"],
+      "@masknet/plugin-maskbox": ["./packages/plugins/MaskBox/src/index.ts"],
+      "@masknet/plugin-smart-pay": ["./packages/plugins/SmartPay/src/index.ts"],
+      "@masknet/plugin-transak": ["./packages/plugins/Transak/src/index.ts"],
+      "@masknet/plugin-vcent": ["./packages/plugins/VCent/src/index.ts"],
+      "@masknet/plugin-collectible": ["./packages/plugins/Collectible/src/index.ts"],
+      "@masknet/plugin-claim": ["./packages/plugins/Claim/src/index.ts"],
+      "@masknet/plugin-artblocks": ["./packages/plugins/ArtBlocks/src/index.ts"],
+      "@masknet/plugin-pets": ["./packages/plugins/Pets/src/index.ts"],
+      "@masknet/plugin-tips": ["./packages/plugins/Tips/src/index.ts"],
+      "@masknet/plugin-nextid": ["./packages/plugins/NextID/src/index.ts"],
+      "@masknet/plugin-trader": ["./packages/plugins/Trader/src/index.ts"],
+      "@masknet/plugin-profilecard": ["./packages/plugins/ProfileCard/src/index.ts"],
+      "@masknet/plugin-savings": ["./packages/plugins/Savings/src/index.ts"],
+      "@masknet/plugin-snapshot": ["./packages/plugins/Snapshot/src/index.ts"],
       // @masknet/scripts: insert-here 3
-      "@masknet/plugin-switch-logo": ["./packages/plugins/SwitchLogo/src"],
-      "@masknet/plugin-calendar": ["./packages/plugins/Calendar/src"]
+      "@masknet/plugin-switch-logo": ["./packages/plugins/SwitchLogo/src/index.ts"],
+      "@masknet/plugin-calendar": ["./packages/plugins/Calendar/src/index.ts"]
     }
   },
   "files": [],
