chore: impl wagmi

--- a/packages/injected-script/sdk/tsconfig.json
+++ b/packages/injected-script/sdk/tsconfig.json
@@ -17,6 +17,7 @@
     "MetaMask.ts",
     "Opera.ts",
     "Clover.ts",
+    "Wagmi.ts",
     "utils.ts"
   ],
   "references": [{ "path": "../shared/tsconfig.json" }]
