chore: impl mm & wc connector

--- a/packages/injected-script/sdk/tsconfig.json
+++ b/packages/injected-script/sdk/tsconfig.json
@@ -18,6 +18,7 @@
     "Opera.ts",
     "Clover.ts",
     "Wagmi.ts",
+    "WalletConnect.ts",
     "utils.ts"
   ],
   "references": [{ "path": "../shared/tsconfig.json" }]
