--- a/packages/mask/package.json
+++ b/packages/mask/package.json
@@ -86,6 +86,7 @@
     "@types/use-subscription": "^1.0.0",
     "@types/uuid": "^9.0.3",
     "@types/webextension-polyfill": "^0.10.2",
+    "assert": "^2.1.0",
     "async-call-rpc": "^6.3.1",
     "bignumber.js": "9.1.2",
     "bip39": "^3.1.0",
@@ -98,7 +99,6 @@
     "guess-calling-code": "^1.1.8",
     "html-to-image": "^1.11.11",
     "https-browserify": "^1.0.0",
-    "zlib-browserify": "^0.0.3",
     "idb": "^7.1.1",
     "immer": "^10.0.2",
     "json-stable-stringify": "^1.0.2",
@@ -115,6 +115,7 @@
     "stream-browserify": "^3.0.0",
     "stream-http": "^2.8.3",
     "unstated-next": "^1.1.0",
+    "url": "^0.11.3",
     "urlcat": "^3.1.0",
     "use-subscription": "^1.8.0",
     "uuid": "^9.0.0",
@@ -122,6 +123,7 @@
     "web3-core-helpers": "1.10.2",
     "web3-utils": "1.10.2",
     "webextension-polyfill": "^0.10.0",
+    "zlib-browserify": "^0.0.3",
     "zod": "^3.22.2"
   },
   "devDependencies": {
